
2017-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_run): fixed possible SIGSEGV for long run options,
	  use output_name, with stripped extension if necessary (see bug #466)
	* cobc.c (process_translate): fixed bug #466 by removing path from
	  C source names after fopen
	* cobc.c: fixed possible SIGSEGV for long COB_STRIP_CMD
	* cobc.c (process_link): only add COB_EXE_EXT for running strip command
	  if is isn't already specified
	* pplex.l (ppopen): fixed bug #467 by adding missing checks for
	  recursive sources before fopen
	* cobc.c, error.c: allowed messages with filenames only, line number
	  isn't printed if -1

2017-11-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobc.c (process_assemble, process_filename)[__OS400__]: fixed
	  SIGSEGV by ensuring bufflen to always include the size of the full
	  path for fn->translate and a minor memory issue by calling
	  cobc_main_free with original fn->translate before assigning it with
	  the full path
	* cobc.c (process_assemble)[__OS400__, __WATCOMC__]: removed running
	  the created object file
	* cobc.c: renamed cobc_stradd_dup to cobc_main_stradd_dup and added
	  a new version of cobc_stradd_dup that uses temporary memory
	* cobc.c: added optional parameter to file_basename to specify which
	  extension to remove (if NULL all extensions will be removed)
	* cobc.c (process_filename): use strcasecmp instead of strcmp
	  because of possible compilation on FAT/NTFS
	* cobc.c: removed wants_nonfinal, directly check cb_compile_level instead
	* cobc.c (set_compile_level_from_file_extension): new function to
	  adjust cb_compile_level if outputname was specified but no option
	  to set the compile level

2017-11-15  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l, cobc.c: removed superfluous memset to 0 after cobc_malloc
	  in listing functions
	* cobc.c, cobc.h: always store cb_source_format as enum cb_format,