@@ -1,4 +1,13 @@
 
+2017-11-22  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
+
+	* parser.y, reserved.c: added parsing for ARITHMETIC clause
+	* parser.y, reserved.c, cobc.h: added context sensitivity for
+	  SCREEN SECTION, adjusted reserved words to CB_CS_SCREEN and CB_CS_SET
+	* parser.y: renamed "not" to much more clearer "not_expr" to prevent
+	  confusing it with "flag_not"
+	* reserved.c: moved aliases LOW-VALUES/HIGH-VALUES to default.conf
+
 2017-11-21  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>
 
 	* cobc.c (process_run): fixed possible SIGSEGV for long run options,
